@@ -38,6 +38,7 @@ import java.io.FileOutputStream;
 import java.io.IOException;
 import java.math.BigInteger;
 import java.net.URL;
+import java.net.URLEncoder;
 import java.util.Arrays;
 import java.util.HashMap;
 import java.util.List;
@@ -262,11 +263,6 @@ public abstract class AbstractCassandraMojo
         createCassandraJar( jarFile, mainClass, cassandraDir );
     }
 
-
-    protected boolean useJdk11Options() {
-        return false;
-    }
-
     /**
      * Create a jar with just a manifest containing a Main-Class entry for SurefireBooter and a Class-Path entry for
      * all classpath elements. Copied from surefire (ForkConfiguration#createJar())
@@ -279,10 +275,12 @@ public abstract class AbstractCassandraMojo
         throws IOException
     {
         File conf = new File( cassandraDir, "conf" );
-        try ( FileOutputStream fos = new FileOutputStream( jarFile );
-              JarOutputStream jos = new JarOutputStream( fos )
-        )
+        FileOutputStream fos = null;
+        JarOutputStream jos = null;
+        try
         {
+            fos = new FileOutputStream( jarFile );
+            jos = new JarOutputStream( fos );
             jos.setLevel( JarOutputStream.STORED );
             jos.putNextEntry( new JarEntry( "META-INF/MANIFEST.MF" ) );
 
@@ -340,6 +338,11 @@ public abstract class AbstractCassandraMojo
             man.getMainAttributes().putValue( "Main-Class", mainClass );
 
             man.write( jos );
+        }
+        finally
+        {
+            IOUtil.close( jos );
+            IOUtil.close( fos );
         }
     }
 
@@ -501,7 +504,8 @@ public abstract class AbstractCassandraMojo
         {
             if ( session != null ) // session is null in tests..
             {
-                ToolchainManager toolchainManager = session.getContainer().lookup( ToolchainManager.class );
+                ToolchainManager toolchainManager =
+                    (ToolchainManager) session.getContainer().lookup( ToolchainManager.ROLE );
 
                 if ( toolchainManager != null )
                 {
@@ -616,33 +620,6 @@ public abstract class AbstractCassandraMojo
         createCassandraHome( cassandraDir, listenAddress, rpcAddress, initialToken, seeds );
         CommandLine commandLine = newJavaCommandLine();
         commandLine.addArgument( "-Xmx" + maxMemory + "m" );
-
-        if (useJdk11Options())
-        {
-            commandLine.addArgument( "-Djdk.attach.allowAttachSelf=true" );
-            commandLine.addArgument( "--add-exports=java.base/jdk.internal.misc=ALL-UNNAMED" );
-            commandLine.addArgument( "--add-exports=java.base/jdk.internal.ref=ALL-UNNAMED" );
-            commandLine.addArgument( "--add-exports=java.base/sun.nio.ch=ALL-UNNAMED" );
-            commandLine.addArgument( "--add-exports=java.management.rmi/com.sun.jmx.remote.internal.rmi=ALL-UNNAMED" );
-            commandLine.addArgument( "--add-exports=java.rmi/sun.rmi.registry=ALL-UNNAMED" );
-            commandLine.addArgument( "--add-exports=java.rmi/sun.rmi.server=ALL-UNNAMED" );
-            commandLine.addArgument( "--add-exports=java.sql/java.sql=ALL-UNNAMED" );
-            commandLine.addArgument( "--add-opens=java.base/java.lang.module=ALL-UNNAMED" );
-            commandLine.addArgument( "--add-opens=java.base/jdk.internal.loader=ALL-UNNAMED" );
-            commandLine.addArgument( "--add-opens=java.base/jdk.internal.ref=ALL-UNNAMED" );
-            commandLine.addArgument( "--add-opens=java.base/jdk.internal.reflect=ALL-UNNAMED" );
-            commandLine.addArgument( "--add-opens=java.base/jdk.internal.math=ALL-UNNAMED" );
-            commandLine.addArgument( "--add-opens=java.base/jdk.internal.module=ALL-UNNAMED" );
-            commandLine.addArgument( "--add-opens=java.base/jdk.internal.util.jar=ALL-UNNAMED" );
-            commandLine.addArgument( "--add-opens=jdk.management/com.sun.management.internal=ALL-UNNAMED" );
-            commandLine.addArgument( "--add-opens=java.base/java.io=ALL-UNNAMED" );
-            commandLine.addArgument( "--add-opens=java.base/java.nio=ALL-UNNAMED" );
-            commandLine.addArgument( "--add-opens=java.base/sun.nio.ch=ALL-UNNAMED" );
-            commandLine.addArgument( "--add-opens=java.base/java.util.concurrent=ALL-UNNAMED" );
-            commandLine.addArgument( "--add-opens=java.base/java.util.concurrent.atomic=ALL-UNNAMED" );
-            commandLine.addArgument( "--add-opens=java.base/java.util=ALL-UNNAMED" );
-        }
-
         //Only value should be quoted so we have to do it ourselves explicitly and disable additional quotation of whole
         //argument because it causes errors during launch. Also URLEncode.encode on value seems to work correctly too,
         //it is done for log4j.configuration during toURL().toString() conversion.
